# actuator_train

./: CMakeLists.txt  README.md
include/: carriage_base.h  train.h  train_factory.h
include/carriage/: bar_actuator.h  foo_actuator.h
src/: main.cpp  train_factory.cpp
src/carriage/: bar_actuator.cpp  foo_actuator.cpp
